# trip_planner_with_crewai

./: README.md  agents.py  main.py  notes.txt  pyproject.toml  tasks.py
tools/: calculator_tool.py  search_tool.py
