[tool.poetry]
name = "trip-planner-yt"
version = "0.1.0"
description = "Basic ai trip planner"
authors = ["Riddhi Shah"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.12"
crewai = "0.1.24"
langchain-core = ">=0.1.5,<0.2"
langchain = ">=0.0.354,<0.0.355"
unstructured = "==0.10.25"
pyowm = '3.3.0'
python-dotenv = "1.0.0"
wikipediaapi

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core.masonry.api"